--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babelify": "^6.0.0",
     "browserify": "^8.1.1",
     "chai": "^2.0.0",
+    "chai-jquery": "^2.0.0",
     "del": "^1.1.1",
     "esperanto": "^0.6.7",
     "glob": "^4.3.5",
@@ -56,8 +57,10 @@
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.2.0",
     "isparta": "^2.2.0",
+    "jquery": "^2.1.4",
     "mkdirp": "^0.5.0",
     "mocha": "^2.1.0",
+    "node-jsdom": "^3.1.5",
     "run-sequence": "^1.0.2",
     "sinon": "^1.12.2",
     "sinon-chai": "^2.7.0",
