allowed multi vars, added contributors.txt, updated readme

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,6 +1,5 @@
 {
-  "preset": "airbnb",
-  "maximumLineLength": null,
-  "esnext": true,
-  "excludeFiles": ["src/loop.js"]
+  "preset": "google",
+  "maximumLineLength": 80,
+  "esnext": true
 }
