Removed linting of test directory in gulpfile, cleaned up files to satisfuy styleguide

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,6 @@
 {
   "preset": "google",
   "maximumLineLength": 80,
-  "esnext": true
+  "esnext": true,
+  "excludeFiles": ["./node_modules/**", "./test/**"]
 }
